web/source/css/base.css
/*
	GoToSocial
	Copyright (C) 2021-2022 GoToSocial Authors admin@gotosocial.org

	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU Affero General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU Affero General Public License for more details.

	You should have received a copy of the GNU Affero General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

@font-face {
	font-family: "Noto Sans";
	font-weight: 400;
	src: url(../NotoSans-Regular.ttf) format('truetype');
}

@font-face {
	font-family: "Noto Sans";
	font-weight: bold;
	src: url(../NotoSans-Bold.ttf) format('truetype');
}

$br: 0.4rem;

html, body {
	padding: 0;
	margin: 0;
	background: $bg;
	color: $fg;
	font-family: "Noto Sans", sans-serif;
}

body {
	line-height: 1.5em;
	min-height: 100vh;
	position: relative;
}

.page {
	position: absolute;
	display: grid;
	min-height: 100%;
	min-width: 100%;

	grid-template-columns: 1fr 50% 1fr;
	grid-template-columns: auto min(92%, 90ch) auto;

	grid-template-rows: auto 1fr auto;
}

h1 {
	margin: 0;
	line-height: 2.4rem;
}

a {
	color: $link_fg;
}

header, footer {
	grid-column: 1 / span 3;
}

.content {
	grid-column: 2;
	align-self: start;
}

header a {
	margin: 2rem;
	/* background: $header_bg; */
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;

	img {
		margin-bottom: 1rem;
		align-self: center;
		height: 6rem;
	}

	div {
		flex-grow: 1;
		align-self: center;
		display: flex;

		h1 {
			align-self: center;
			color: $fg;
		}
	}
}

.excerpt_top {
	margin-top: -1rem;
	margin-bottom: 2rem;
	font-style: italic;
	font-weight: normal;
	text-align: center;
	font-size: 1.2rem;

	.count {
		font-weight: bold;
		color: $fg_accent;
	}
}

main {
	section {
		background: $bg_accent;
		box-shadow: $boxshadow;
		border: $boxshadow_border;
		border-radius: $br;
		padding: 2rem;
		margin-bottom: 2rem;
	}

	p:first-child {
		margin-top: 0;
	}

	p:last-child {
		margin-bottom: 0;
	}
}

.button, button {
	border-radius: 0.2rem;
	color: $button_fg;
	background: $button_bg;
	box-shadow: $boxshadow;
	border: $button_border;
	text-decoration: none;
	font-size: 1.2rem;
	font-weight: bold;
	padding: 0.5rem;
	border: none;
	cursor: pointer;

	&:hover {
		background: $button_hover_bg;
	}
}

.nounderline {
	text-decoration: none;
}

.accent {
	color: $acc1;
}

.logo {
	justify-self: center;
	img {
		height: 30vh;
	}
}

section.apps {
	align-self: start;

	.applist {
		display: grid;
		grid-template-columns: 1fr 1fr;
		grid-gap: 0.5rem;
		align-content: start;

		.entry {
			display: grid;
			grid-template-columns: 25% 1fr;
			gap: 1.5rem;
			padding: 0.5rem;
			background: $bg_accent;
			border-radius: 0.5rem;

			.logo {
				align-self: center;
				width: 100%;
				object-fit: contain;
				flex: 1 1 auto;
			}

			.logo.redraw {
				fill: $fg;
				stroke: $fg;
			}

			a {
				font-weight: bold;
			}

			div {
				padding: 1rem 0;
				h3 {
					margin-top: 0;
				}
			}
		}
	}
}

section.login {
	form {
		display: inline-grid;
		grid-template-columns: auto 100%;
		grid-gap: 0.7rem;

		button {
			place-self: center;
			grid-column: 2;
		}
	}
}

section.error {
	display: flex;
	flex-direction: row;
	align-items: center;
	span {
		font-size: 2em;
	}
	pre {
		border: 1px solid #ff000080;
		margin-left: 1em;
		padding: 0 0.7em;
		border-radius: 0.5em;
		background-color: #ff000010;
		font-size: 1.3em;
		white-space: pre-wrap;
	}
}

input, select, textarea {
	border: 1px solid $fg;
	color: $fg;
	background: $bg;
	width: 100%;
}

footer {
	align-self: end;

	padding: 2rem;
	display: flex;
	justify-content: center;

	div {
		margin: 0 2rem;
		padding: 1rem;
	}

	a {
		font-weight: bold;
	}
}

@media screen and (orientation: portrait) {
	.page {
		grid-template-columns: 1fr 92% 1fr;
	}

	header {
		text-align: center;
	}

	footer {
		margin-top: 2rem;
		grid-template-columns: 1fr;

		div {
			margin: 0.3rem 0;
		}
	}

	section.apps .applist {
		grid-template-columns: 1fr;
	}
}

